--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -106,7 +106,7 @@
     margin: 0;
     overflow-x: hidden;
     padding: 0;
-    font-family: "Roboto", Arial, sans-serif;
+    font-family: "Montserrat", Arial, sans-serif;
     font-size: 100%;
     color: var(--bodyTextColor);
   }
@@ -132,12 +132,14 @@
   h5,
   h6 {
     margin: 0;
+    font-family: "Bebas Neue", Arial, sans-serif;
     color: var(--headerColor);
   }
   p,
   li,
   a {
     margin: 0;
+    font-family: "Montserrat", Arial, sans-serif;
     font-size: 1rem;
     line-height: 1.5em;
   }
@@ -156,32 +158,37 @@
     left: 0;
     opacity: 0;
   }
-  /* roboto-regular - latin */
+  /* montserrat-regular - latin */
   @font-face {
     font-style: normal;
-    font-family: "Roboto";
+    font-family: "Montserrat";
     font-weight: 400;
     font-display: swap;
-    src: local(""), url("/assets/fonts/roboto-v29-latin-regular.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */ url("/assets/fonts/roboto-v29-latin-regular.woff") format("woff");
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    src: local(""), url("/assets/fonts/montserrat-v25-latin-regular.woff2") format("woff2"), url("/assets/fonts/montserrat-v25-latin-regular.woff") format("woff");
   }
-  /* roboto-700 - latin */
+  /* montserrat-700 - latin */
   @font-face {
     font-style: normal;
-    font-family: "Roboto";
+    font-family: "Montserrat";
     font-weight: 700;
     font-display: swap;
-    src: local(""), url("/assets/fonts/roboto-v29-latin-700.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */ url("/assets/fonts/roboto-v29-latin-700.woff") format("woff");
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    src: local(""), url("/assets/fonts/montserrat-v25-latin-700.woff2") format("woff2"), url("/assets/fonts/montserrat-v25-latin-700.woff") format("woff");
   }
-  /* roboto-900 - latin */
+  /* bebas-neue-regular - latin */
   @font-face {
     font-style: normal;
-    font-family: "Roboto";
-    font-weight: 900;
+    font-family: "Bebas Neue";
+    font-weight: 400;
     font-display: swap;
-    src: local(""), url("/assets/fonts/roboto-v29-latin-900.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */ url("/assets/fonts/roboto-v29-latin-900.woff") format("woff");
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    src: local(""), url("/assets/fonts/bebas-neue-v11-latin-regular.woff2") format("woff2"), url("/assets/fonts/bebas-neue-v11-latin-regular.woff") format("woff");
+  }
+  /* great-vibes-regular - latin (optional for decorative use) */
+  @font-face {
+    font-style: normal;
+    font-family: "Great Vibes";
+    font-weight: 400;
+    font-display: swap;
+    src: local(""), url("/assets/fonts/great-vibes-v10-latin-regular.woff2") format("woff2"), url("/assets/fonts/great-vibes-v10-latin-regular.woff") format("woff");
   }
 }
 /* Reset Margins */
