--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -1,174 +1,132 @@
-/* STYLES FOR ABOVE THE FOLD */
+
+
+
 
 /*-- -------------------------- -->
 <---           Hero             -->
 <--- -------------------------- -*/
 
-/* Mobile - 360px */
+/* Mobile */
 @media only screen and (min-width: 0rem) {
-    #hero {
-        z-index: 1;
-        position: relative;
-        /* prevents overflow from the lines extending past the screen width */
-        overflow: hidden;
-        /* changes on tablet */
-        padding: 0 (16/16rem);
-        padding-bottom: (100/16rem);
-        font-family: "Roboto", "Arial", sans-serif;
-        /* Centers button */
-        text-align: center;
-
-        .cs-picture {
-            z-index: -2;
-            position: absolute;
-            top: 0;
-            left: 0;
-            display: block;
-            height: 100%;
-            /* Background Image */
-            width: 100%;
-
-            img {
-                position: absolute;
-                top: 0;
-                left: 0;
-                height: 100%;
-                width: 100%;
-                /* Makes image act like a background-image */
-                object-fit: cover;
-            }
-
-            &:before {
-                z-index: 1;
-                position: absolute;
-                top: 0;
-                left: 0;
-                /* Black Color Overlay */
-                content: "";
-                opacity: 0.7;
-                display: block;
-                background: #000;
-                height: 100%;
-                width: 100%;
-                /* prevents the cursor from interacting with it */
-                pointer-events: none;
-            }
-        }
+    #hero-2344 {
+        padding: var(--sectionPadding);
+        /* 120px 0 160px */
+        padding-top: clamp(7.5rem, 12vw, 10rem);
 
         .cs-container {
-            position: relative;
-            margin: auto;
-            max-width: (1280/16em);
             width: 100%;
-            /* we put the padding top and bottom on the container instead of #Hero so the pseudo element lines go to the top and bottom of the section */
-            /* 144px - 280px - leaving extra space for the navigation */
-            /* changes on tablet */
-            padding: clamp(9em, 25.95vw, 17.5em) 0;
+            max-width: (1800/16rem);
+            margin: auto;
+            /* 420px - 560px */
+            padding-top: clamp(26.25rem, 65vw, 35rem);
+            position: relative;
+            z-index: 1;
 
             &:before {
+                /* gradient Overlay */
+                content: '';
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.92) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+                opacity: 1;
+                display: block;
                 position: absolute;
                 top: 0;
                 left: 0;
-                /* Left Line */
-                content: "";
-                opacity: 1;
-                display: block;
-                background: -moz-linear-gradient(top, rgba(250, 251, 252, 0.5) 0%, rgba(250, 251, 252, 0) 100%); /* FF3.6-15 */
-                background: -webkit-linear-gradient(top, rgba(250, 251, 252, 0.5) 0%, rgba(250, 251, 252, 0) 100%); /* Chrome10-25,Safari5.1-6 */
-                height: 100%;
-                width: 1px;
+                z-index: -1;
             }
         }
 
-        .cs-flex-group {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: flex-start;
-            margin: auto;
-            /* 60px - 220px */
-            margin-bottom: clamp(3.75em, 15.5vw, 13.75em);
-            /* 464px - 562px */
-            max-width: clamp(29em, 60vw, 35.125em);
-            width: 80vw;
+        .cs-content {
+            /* 24px - 40px top & bottom */
+            /* 16px - 40px left & right */
+            padding: clamp(1.5rem, 4vw, 2.5rem) clamp(1rem, 4vw, 2.5rem);
             box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            row-gap: (16/16rem);
         }
 
-        .cs-topper {
-            margin-bottom: (16/16rem);
-            color: var(--primary);
-            text-align: center;
+        .cs-flex {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+        }
+
+        .cs-flex2 {
+            max-width: (540/16rem);
         }
 
         .cs-title {
-            width: 100%;
+            /* 39px - 90px */
+            font-size: clamp(2.4375rem, 6vw, 5.625rem);
+            margin-bottom: 0;
             color: var(--bodyTextColorWhite);
-            text-align: center;
         }
 
         .cs-text {
-            /* 32px - 40px */
-            margin: 0 auto clamp(2rem, 4vw, 2.5rem) 0;
-            /* 40px - 48px */
-            margin-bottom: clamp(2.5rem, 4vw, 3rem);
             color: var(--bodyTextColorWhite);
-            text-align: center;
+            margin-bottom: (32/16rem);
         }
 
         .cs-button-solid {
-            margin-bottom: (16/16rem);
-            height: initial;
-            line-height: clamp(2.875em, 5.5vw, 3.5em);
-        }
-
-        .cs-button-transparent {
-            z-index: 1;
-            position: relative;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-            border: 1px solid var(--bodyTextColorWhite);
-            margin: 0 (8/16rem);
-            background-color: transparent;
-            /* 46px - 56px */
-            height: clamp(2.875em, 5.5vw, 3.5em);
-            width: (180/16rem);
-            box-sizing: border-box;
-            padding: 0;
-            text-decoration: none;
             font-size: (16/16rem);
-            /* 46px - 56px */
-            line-height: clamp(2.875em, 5.5vw, 3.5em);
             font-weight: 700;
-            color: #fff;
-
-            .cs-img {
-                display: block;
-                margin-right: (12/16rem);
-            }
+            /* 46px - 56px */
+            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+            text-align: center;
+            text-decoration: none;
+            min-width: (150/16rem);
+            margin: 0;
+            padding: 0 (24/16rem);
+            background-color: var(--primary);
+            color: var(--bodyTextColorWhite);
+            display: inline-block;
+            position: relative;
+            z-index: 1;
 
             &:before {
-                z-index: -1;
-                position: absolute;
-                /* so it sits on top of the border */
-                top: -1px;
-                bottom: -1px;
-                left: -1px;
-                right: -1px;
                 content: "";
-                opacity: 1;
-                /* this is what creates the grow affect on hover */
-                transform: scaleX(0);
-                display: block;
+                width: 0%;
+                height: 100%;
                 background: #000;
-                transition: transform 0.3s;
-                transform-origin: left;
+                opacity: 1;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                transition: width 0.3s;
             }
 
             &:hover {
                 &:before {
-                    transform: scaleX(1);
+                    width: 100%;
                 }
+            }
+        }
+
+        .cs-button-solid {
+            align-self: flex-start;
+        }
+
+        .cs-background {
+            width: 100%;
+            height: 100%;
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            z-index: -2;
+
+            img {
+                width: 100%;
+                height: 100%;
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                object-fit: cover;
             }
         }
     }
@@ -176,55 +134,12 @@
 
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-    #hero {
-        /* 32px - 40px */
-        padding: 0 clamp(2em, 5vw, 2.5em);
-
-        .cs-container {
-            padding: clamp(7em, 27.95vw, 17.5em) 0 clamp(9em, 30.95vw, 23.5em) 0;
-            &:after {
-                position: absolute;
-                top: 0;
-                right: 0;
-                /* Right Line */
-                content: "";
-                opacity: 1;
-                display: block;
-                background: -moz-linear-gradient(top, rgba(250, 251, 252, 0) 0%, rgba(250, 251, 252, 0.5) 100%); /* FF3.6-15 */
-                background: -webkit-linear-gradient(top, rgba(250, 251, 252, 0) 0%, rgba(250, 251, 252, 0.5) 100%); /* Chrome10-25,Safari5.1-6 */
-                height: 100%;
-                width: 1px;
-            }
-        }
-
-        .cs-button-solid {
-            margin-right: (20/16rem);
-            margin-bottom: 0;
-        }
-    }
-}
-
-/* Desktop Parallax Effect - 1300px */
-@media only screen and (min-width: 81.25em) {
-    #hero {
-        background: url("/assets/images/landing.jpg");
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        /* creates parallax effect on background image */
-        background-attachment: fixed;
-    }
-}
-
-/* Dark Mode */
-@media only screen and (min-width: 0rem) {
-    body.dark-mode {
-        #hero {
-            .cs-background {
-                &:before {
-                    opacity: 0.8;
-                }
-            }
+    #hero-2344 {
+        .cs-content {
+            flex-direction: row;
+            justify-content: space-between;
+            /* 64px - 100px */
+            gap: clamp(4rem, 10vw, 6.25rem);
         }
     }
 }
@@ -235,104 +150,99 @@
 
 /* Mobile */
 @media only screen and (min-width: 0rem) {
-    .services {
-        z-index: 100;
-        position: relative;
-        border-top: (6/16em) solid var(--primary);
-        border-radius: (5/16em);
-        margin: auto;
-        margin-top: calc(-167 / 16 * 1em);
-        margin-bottom: (50/16em);
-        background: #fff;
-        max-width: (1320/16em);
-        width: 90%;
-        padding: (50/16em) (20/16em);
-        box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
-        .card {
-            display: block;
-            margin: auto;
-            margin-bottom: (50/16em);
-            max-width: (357/16em);
+    #services-2344 {
+        padding: var(--sectionPadding);
+        padding-top: 0;
+
+        .cs-card-group {
             width: 100%;
-
-            picture {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 50%;
-                margin: auto;
-                margin-bottom: (23/16em);
-                background: var(--primary);
-                height: (88/16em);
-                width: (88/16em);
-
-                img {
-                    height: (48/16em);
-                    width: (48/16em);
-                }
-            }
-            h2 {
-                margin-bottom: (13/20em);
-                font-size: (32/16em);
-                line-height: (27/20em);
-                font-weight: 700;
-                color: #1a1a1a;
-                text-align: center;
-            }
-            p {
-                opacity: 0.7;
-                width: 100%;
-                line-height: (24/18em);
-                text-align: center;
-            }
-            &:last-of-type {
-                margin-bottom: 0;
-            }
+            max-width: (1800/16rem);
+            margin: 0 auto;
+            padding: 0;
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            /* 16px - 20px, changes to 100px at large desktop 1300px */
+            column-gap: clamp(1rem, 3vw, 1.25rem);
+            row-gap: (32/16rem);
         }
-    }
-}
 
-/* Inbetween */
-@media only screen and (min-width: 768px) {
-    .services {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        width: 98%;
-        font-size: ~"min(1.8vw, 1em)";
-
-        .card {
+        .cs-item {
+            list-style: none;
+            text-align: left;
             margin: 0;
-            max-width: (325/16em);
+            padding: 0;
+            grid-column: span 12;
+        }
+
+        .cs-link {
+            text-decoration: none;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: (16/16rem);
+        }
+
+        .cs-h2 {
+            /* 20px - 25px */
+            font-size: clamp(1.25rem, 3vw, 1.5625rem);
+            text-align: inherit;
+            line-height: 1.2em;
+            font-weight: 700;
+            margin: 0;
+            padding-bottom: (16/16rem);
+            height: 100%;
+            color: var(--headerColor);
+            border-bottom: 1px solid #E3DDD9;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            gap: (16/16rem);
+        }
+
+        .cs-icon {
+            width: (24/16rem);
+            height: auto;
+            display: block;
+        }
+
+        .cs-item-text {
+            font-size: (16/16rem);
+            text-align: inherit;
+            line-height: 1.5em;
+            margin: 0;
+            color: var(--bodyTextColor);
         }
     }
 }
 
-/* Large Desktop */
-@media only screen and (min-width: 1300px) {
-    .services {
-        padding: (50/16em) (80/16em);
-
-        .card {
-            max-width: (357/16em);
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+    #services-2344 {
+        .cs-item {
+            grid-column: span 6;
         }
     }
 }
 
-/* Dark mode */
-@media only screen and (min-width: 0rem) {
-    body.dark-mode {
-        #services {
-            background: var(--medium);
-
-            picture {
-                background: var(--primaryDark);
-            }
-
-            h2 {
-                font-weight: bold;
-                color: #fff;
-            }
+/* Small Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+    #services-2344 {
+        .cs-item {
+            grid-column: span 3;
         }
     }
 }
+
+/* Large Desktop - 1300px */
+@media only screen and (min-width: 81.25rem) {
+    #services-2344 {
+        .cs-card-group {
+            column-gap: (100/16rem);
+        }
+    }
+}
+                                
+
+                                
+                                
+                                                          
