--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -127,7 +127,7 @@
         margin: 0;
         overflow-x: hidden;
         padding: 0;
-        font-family: "Roboto", Arial, sans-serif;
+        font-family: "Montserrat", Arial, sans-serif;
         font-size: 100%;
         color: var(--bodyTextColor);
     }
@@ -157,6 +157,7 @@
     h5,
     h6 {
         margin: 0;
+        font-family: "Bebas Neue", Arial, sans-serif;
         color: var(--headerColor);
     }
 
@@ -164,6 +165,7 @@
     li,
     a {
         margin: 0;
+        font-family: "Montserrat", Arial, sans-serif;
         font-size: (16/16rem);
         line-height: 1.5em;
     }
@@ -188,36 +190,49 @@
         left: 0;
         opacity: 0;
     }
+
     // Grab your fonts to locally host from https://google-webfonts-helper.herokuapp.com/fonts
 
-    /* roboto-regular - latin */
+    /* montserrat-regular - latin */
     @font-face {
         font-style: normal;
-        font-family: "Roboto";
+        font-family: "Montserrat";
         font-weight: 400;
         font-display: swap;
-        src: local(""), url("/assets/fonts/roboto-v29-latin-regular.woff2") format("woff2"),
-            /* Chrome 26+, Opera 23+, Firefox 39+ */ url("/assets/fonts/roboto-v29-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        src: local(""), url("/assets/fonts/montserrat-v25-latin-regular.woff2") format("woff2"),
+            url("/assets/fonts/montserrat-v25-latin-regular.woff") format("woff");
     }
-    /* roboto-700 - latin */
+    /* montserrat-700 - latin */
     @font-face {
         font-style: normal;
-        font-family: "Roboto";
+        font-family: "Montserrat";
         font-weight: 700;
         font-display: swap;
-        src: local(""), url("/assets/fonts/roboto-v29-latin-700.woff2") format("woff2"),
-            /* Chrome 26+, Opera 23+, Firefox 39+ */ url("/assets/fonts/roboto-v29-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        src: local(""), url("/assets/fonts/montserrat-v25-latin-700.woff2") format("woff2"),
+            url("/assets/fonts/montserrat-v25-latin-700.woff") format("woff");
     }
-    /* roboto-900 - latin */
+
+    /* bebas-neue-regular - latin */
     @font-face {
         font-style: normal;
-        font-family: "Roboto";
-        font-weight: 900;
+        font-family: "Bebas Neue";
+        font-weight: 400;
         font-display: swap;
-        src: local(""), url("/assets/fonts/roboto-v29-latin-900.woff2") format("woff2"),
-            /* Chrome 26+, Opera 23+, Firefox 39+ */ url("/assets/fonts/roboto-v29-latin-900.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        src: local(""), url("/assets/fonts/bebas-neue-v11-latin-regular.woff2") format("woff2"),
+            url("/assets/fonts/bebas-neue-v11-latin-regular.woff") format("woff");
+    }
+
+    /* great-vibes-regular - latin (optional for decorative use) */
+    @font-face {
+        font-style: normal;
+        font-family: "Great Vibes";
+        font-weight: 400;
+        font-display: swap;
+        src: local(""), url("/assets/fonts/great-vibes-v10-latin-regular.woff2") format("woff2"),
+            url("/assets/fonts/great-vibes-v10-latin-regular.woff") format("woff");
     }
 }
+
 
 /* Reset Margins */
 @media only screen and (min-width: 1024px) {
