--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -15,9 +15,9 @@
         <a href="/contact" class="cs-button-solid">Get an Estimate Now</a>
     </div>
     <picture>
-        <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-        <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-        <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="kitchen cabinets" loading="lazy" width="2500" height="1667">
+        <source media="(max-width: 600px)" srcset="https://ik.imagekit.io/6ycdefzj5/car-wrapping-mechanic-with-squeegee-installs-film-2024-12-05-05-19-40-utc.jpg?updatedAt=1749499952268">
+        <source media="(min-width: 601px)" srcset="https://ik.imagekit.io/6ycdefzj5/car-wrapping-mechanic-with-squeegee-installs-film-2024-12-05-05-19-40-utc.jpg?updatedAt=1749499952268">
+        <img aria-hidden="true" decoding="async" src="https://ik.imagekit.io/6ycdefzj5/car-wrapping-mechanic-with-squeegee-installs-film-2024-12-05-05-19-40-utc.jpg?updatedAt=1749499952268" alt="kitchen cabinets" loading="lazy" width="2500" height="1667">
     </picture>
 
 </section>
