--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -28,7 +28,7 @@
                 width: 100%;
                 height: 100%;
                 background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.92) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-                opacity: 1;
+                opacity: .5;
                 display: block;
                 position: absolute;
                 top: 0;
@@ -144,104 +144,10 @@
     }
 }
 
-/*-- -------------------------- -->
-<---          Services          -->
-<--- -------------------------- -*/
 
-/* Mobile */
-@media only screen and (min-width: 0rem) {
-    #services-2344 {
-        padding: var(--sectionPadding);
-        padding-top: 0;
 
-        .cs-card-group {
-            width: 100%;
-            max-width: (1800/16rem);
-            margin: 0 auto;
-            padding: 0;
-            display: grid;
-            grid-template-columns: repeat(12, 1fr);
-            /* 16px - 20px, changes to 100px at large desktop 1300px */
-            column-gap: clamp(1rem, 3vw, 1.25rem);
-            row-gap: (32/16rem);
-        }
 
-        .cs-item {
-            list-style: none;
-            text-align: left;
-            margin: 0;
-            padding: 0;
-            grid-column: span 12;
-        }
-
-        .cs-link {
-            text-decoration: none;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            gap: (16/16rem);
-        }
-
-        .cs-h2 {
-            /* 20px - 25px */
-            font-size: clamp(1.25rem, 3vw, 1.5625rem);
-            text-align: inherit;
-            line-height: 1.2em;
-            font-weight: 700;
-            margin: 0;
-            padding-bottom: (16/16rem);
-            height: 100%;
-            color: var(--headerColor);
-            border-bottom: 1px solid #E3DDD9;
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            gap: (16/16rem);
-        }
-
-        .cs-icon {
-            width: (24/16rem);
-            height: auto;
-            display: block;
-        }
-
-        .cs-item-text {
-            font-size: (16/16rem);
-            text-align: inherit;
-            line-height: 1.5em;
-            margin: 0;
-            color: var(--bodyTextColor);
-        }
-    }
-}
-
-/* Tablet - 768px */
-@media only screen and (min-width: 48rem) {
-    #services-2344 {
-        .cs-item {
-            grid-column: span 6;
-        }
-    }
-}
-
-/* Small Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
-    #services-2344 {
-        .cs-item {
-            grid-column: span 3;
-        }
-    }
-}
-
-/* Large Desktop - 1300px */
-@media only screen and (min-width: 81.25rem) {
-    #services-2344 {
-        .cs-card-group {
-            column-gap: (100/16rem);
-        }
-    }
-}
-                                
+                                                             
 
                                 
                                 
