--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -68,6 +68,10 @@
             color: var(--bodyTextColorWhite);
             margin-bottom: (32/16rem);
         }
+        .cs-topper {
+            color: var(--bodyTextColorWhite);
+            
+        }
 
         .cs-button-solid {
             font-size: (16/16rem);
