--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -384,14 +384,15 @@
             height: 100%;
             /* prevents padding from affecting height and width */
             box-sizing: border-box;
-            padding: (12/16rem) (16/16rem);
-            display: flex;
+            padding:
+            
             justify-content: center;
             align-items: center;
             position: absolute;
             top: 0;
             left: 0;
             z-index: 10;
+            background-color: #ffffff;
 
             img {
                 width: 100%;
@@ -628,6 +629,7 @@
     }
 
 }
+
 
 /* Tablet - 650px - 1023px */
 @media only screen and (min-width: 40.625rem) and (max-width: 63.9375rem) {
@@ -1153,6 +1155,34 @@
             margin-left: auto;
             border-radius: 0;
         }
+
+        .cs-logo {
+            width: 40%;
+            max-width: (146/16rem);
+            height: 100%;
+            /* prevents padding from affecting height and width */
+            box-sizing: border-box;
+            padding: 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 10;
+            background-color: #ffffff;
+
+            img {
+                width: 400%;
+                height: 100%;
+                /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
+                object-fit: contain;
+                /* places the image to the left edge of the parent */
+                object-position: left;
+            }
+        }
+
+
     }
 }
                                 
