--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -1,267 +1,168 @@
-/* PAGE-SPECIFIC STYLES FOR THE CONTACT PAGE */
 /*-- -------------------------- -->
 <---          Contact           -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  :root {
-    /* 13px - 16px */
-    --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
-    /* 31px - 49px */
-    --headerFontSize: clamp(1.9375rem, 4.5vw, 3.0625rem);
-    --bodyFontSize: 1rem;
-    /* 60px - 100px top and bottom */
-    --sectionPadding: clamp(3.75em, 7.82vw, 6.25em) 1rem;
-  }
-  #cs-contact {
+  #contact-1184 {
     padding: var(--sectionPadding);
-    font-family: "Roboto", "Arial", sans-serif;
+    background-color: #f7f7f7;
+    position: relative;
+    z-index: 1;
   }
-  #cs-contact .cs-container {
+  #contact-1184 .cs-container {
+    width: 100%;
+    /* changes to 100% at tablet */
+    max-width: 36.5rem;
     margin: auto;
-    /* changes to 1280px at desktop */
-    max-width: 50rem;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    flex-direction: column;
+    /* 48px - 80px */
+    gap: clamp(3rem, 6vw, 5rem);
+  }
+  #contact-1184 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: center;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: center;
   }
-  #cs-contact .cs-content {
+  #contact-1184 .cs-title {
+    margin: 0 0 2rem 0;
+  }
+  #contact-1184 .cs-form {
     width: 100%;
+    /* 24px - 48px top and bottom */
+    /* 24px - 32px left and right */
+    padding: clamp(1.5rem, 4vw, 3rem) clamp(1.5rem, 3vw, 2rem);
+    /* prevents flexbox from affecting height and width */
+    box-sizing: border-box;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.75rem;
   }
-  #cs-contact .cs-topper {
-    /* 8px - 12px */
-    margin-bottom: clamp(0.5rem, 1.4vw, 0.75rem);
-    text-align: left;
-  }
-  #cs-contact .cs-title {
-    max-width: 50rem;
-    text-align: left;
-  }
-  #cs-contact .cs-text {
-    margin: 0 auto 0 0;
-    /* 40px - 48px */
-    margin-bottom: clamp(2.5rem, 6.3vw, 3rem);
-    /* 404px - 522px */
-    max-width: clamp(25.25rem, 30vw, 32.625rem);
-    text-align: left;
-  }
-  #cs-contact #cs-form {
-    margin-bottom: 2.5rem;
-  }
-  #cs-contact #cs-form label {
+  #contact-1184 .cs-label {
+    /* 14px - 16px */
+    font-size: clamp(0.875rem, 1.5vw, 1rem);
+    width: 100%;
+    color: var(--headerColor);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    /* 12px - 20px */
-    margin-bottom: clamp(0.75rem, 1.3em, 1.25rem);
+    gap: 0.25rem;
+  }
+  #contact-1184 .cs-input {
     font-size: 1rem;
-    line-height: 1.5em;
-    font-weight: 700;
-    color: var(--headerColor);
-  }
-  #cs-contact #cs-form .cs-label-message {
-    /* 32px - 48px */
-    margin-bottom: clamp(2rem, 6.3vw, 3rem);
-  }
-  #cs-contact #cs-form input,
-  #cs-contact #cs-form textarea {
-    border: 1px solid #b4b2c7;
-    border-radius: 0.5rem;
-    margin-top: 0.25rem;
-    height: 4rem;
     width: 100%;
-    /* prevents border & padding from affecting height */
+    height: 3.5rem;
+    padding: 0;
+    padding-left: 1.5rem;
+    color: var(--headerColor);
+    background-color: #f7f7f7;
+    border: none;
+    /* prevents padding from adding to height and width */
     box-sizing: border-box;
-    padding-left: 1.25rem;
-    font-size: 1rem;
-    transition: border 0.3s;
   }
-  #cs-contact #cs-form input:hover,
-  #cs-contact #cs-form textarea:hover {
-    border: 1px solid var(--primary);
+  #contact-1184 .cs-input::placeholder {
+    color: #7d799c;
+    opacity: 0.6;
   }
-  #cs-contact #cs-form textarea {
+  #contact-1184 .cs-textarea {
     min-height: 7.5rem;
-    padding-top: 1.25rem;
+    padding-top: 1.5rem;
+    margin-bottom: 0.75rem;
     font-family: inherit;
   }
-  #cs-contact #cs-form .cs-button-solid {
-    border: none;
-    width: 100%;
-  }
-  #cs-contact .cs-right-section {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
-    border-radius: 0.5rem;
-    height: 20rem;
-    /* cuts off corners on img tag */
-    overflow: hidden;
-    /* 24px - 40px top & bottom */
-    /* 20px - 40px left & right */
-    padding: clamp(1.5rem, 3vw, 2.5rem) clamp(1.25rem, 3vw, 2.5rem);
-  }
-  #cs-contact .cs-header {
-    display: block;
-    margin-bottom: 0.5rem;
-    /* 16px - 20px */
-    font-size: clamp(1rem, 3vw, 1.25rem);
-    line-height: 1.2em;
-    font-weight: 700;
-    color: var(--bodyTextColorWhite);
-  }
-  #cs-contact .cs-link {
-    position: relative;
-    display: block;
-    margin-bottom: 1.25rem;
+  #contact-1184 .cs-button-solid {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875em, 5.5vw, 3.5em);
     text-decoration: none;
-    /* 16px - 20px */
-    font-size: clamp(1rem, 3vw, 1.25rem);
-    line-height: 1.2em;
-    color: var(--bodyTextColorWhite);
+    font-weight: 700;
+    text-align: center;
+    margin: 0;
+    color: #fff;
+    border: none;
+    min-width: 9.375rem;
+    padding: 0 1.5rem;
+    background-color: var(--primary);
+    border-radius: 0.25rem;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    /* prevents padding from adding to the width */
+    box-sizing: border-box;
+    transition: color 0.3s;
   }
-  #cs-contact .cs-link:before {
-    position: absolute;
-    bottom: calc(-2 / 16 * 1rem);
-    left: 0;
-    /* Animated underline */
+  #contact-1184 .cs-button-solid:before {
     content: "";
-    opacity: 1;
-    display: block;
-    /* current color of the parent */
-    background: currentColor;
-    height: 2px;
+    position: absolute;
+    height: 100%;
     width: 0%;
+    background: #000;
+    opacity: 1;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 0.25rem;
     transition: width 0.3s;
   }
-  #cs-contact .cs-link:hover:before {
+  #contact-1184 .cs-button-solid:hover {
+    color: #fff;
+  }
+  #contact-1184 .cs-button-solid:hover:before {
     width: 100%;
   }
-  #cs-contact .cs-link:last-of-type {
-    margin-bottom: 0;
+  #contact-1184 .cs-submit {
+    min-width: 17.6875rem;
+    border-radius: 0;
   }
-  #cs-contact .cs-block {
-    /* sends second address line to the bottom on its own line */
+  #contact-1184 .cs-submit:hover {
+    cursor: pointer;
+  }
+  #contact-1184 .cs-background {
+    width: 100%;
+    height: 80vw;
+    max-height: 28.125rem;
     display: block;
+    position: relative;
   }
-  #cs-contact .cs-bg-picture {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    height: 100%;
+  #contact-1184 .cs-background img {
     width: 100%;
-    transition: transform 0.6s;
-  }
-  #cs-contact .cs-bg-picture img {
-    position: absolute;
-    top: 0;
-    left: 0;
     height: 100%;
-    width: 100%;
-    /* Makes img tag act as a background image */
     object-fit: cover;
-  }
-  #cs-contact .cs-bg-picture:before {
-    z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
-    /* background color overlay */
-    content: "";
-    display: block;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
-    height: 100%;
-    width: 100%;
   }
 }
-/* Tablet - 700px */
-@media only screen and (min-width: 43.75em) {
-  #cs-contact #cs-form {
-    display: flex;
-    flex-wrap: wrap;
+/* Desktop - 1024px */
+@media only screen and (min-width: 48rem) {
+  #contact-1184 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  #contact-1184 .cs-container {
+    max-width: 100%;
+    flex-direction: row;
+    align-items: stretch;
     justify-content: space-between;
-    align-items: flex-start;
+    /* 16px - 52px */
+    gap: clamp(1rem, 2vw, 3.25rem);
   }
-  #cs-contact #cs-form label {
-    width: 48%;
-  }
-  #cs-contact #cs-form .cs-label-message {
-    width: 100%;
-  }
-}
-/* Small Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
-  #cs-contact .cs-container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    max-width: 80rem;
-    gap: 5rem;
-  }
-  #cs-contact #cs-form {
-    max-width: 39.375rem;
-  }
-  #cs-contact #cs-form label {
-    width: 100%;
-  }
-  #cs-contact .cs-right-section {
-    /* changes to 578px at 1300px wide */
-    height: 42.875rem;
+  #contact-1184 .cs-content {
+    width: 45%;
     max-width: 33.875rem;
-    width: 40%;
-    /* prevents flexbox from squishing it */
     flex: none;
   }
-  #cs-contact .cs-right-section:hover .cs-bg-picture {
-    transform: scale(1.1);
-  }
-  #cs-contact .cs-block {
-    /* goes back to inline so it stays "in line" with the rest of the text */
-    display: inline-block;
-  }
-}
-/* Small Desktop - 1300px */
-@media only screen and (min-width: 81.25em) {
-  #cs-contact #cs-form {
-    column-gap: 0rem;
-  }
-  #cs-contact #cs-form label {
-    max-width: 19.0625rem;
-    width: 48%;
-  }
-  #cs-contact #cs-form .cs-label-message {
-    max-width: 100%;
-  }
-  #cs-contact .cs-right-section {
-    height: 36.125rem;
-  }
-}
-/* Dark Mode */
-@media only screen and (min-width: 0rem) {
-  body.dark-mode #cs-contact .cs-text,
-  body.dark-mode #cs-contact .cs-title {
-    color: var(--bodyTextColorWhite);
-  }
-  body.dark-mode #cs-contact #cs-form label,
-  body.dark-mode #cs-contact #cs-form input,
-  body.dark-mode #cs-contact #cs-form textarea {
-    background-color: transparent;
-    color: var(--bodyTextColorWhite);
-  }
-  body.dark-mode #cs-contact #cs-form label::placeholder,
-  body.dark-mode #cs-contact #cs-form input::placeholder,
-  body.dark-mode #cs-contact #cs-form textarea::placeholder {
-    /* lighten up the color of the text by 40%*/
-    filter: brightness(1.4);
-  }
-  body.dark-mode #cs-contact .cs-bg-picture {
-    background-color: #000;
-  }
-  body.dark-mode #cs-contact .cs-bg-picture img {
-    /* lets parent background-color bleed through and darken it */
-    opacity: 0.5;
+  #contact-1184 .cs-background {
+    height: auto;
+    max-height: 100%;
   }
 }
