--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -320,14 +320,14 @@
     height: 100%;
     /* prevents padding from affecting height and width */
     box-sizing: border-box;
-    padding: 0.75rem 1rem;
-    display: flex;
+    padding: display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 10;
+    background-color: #ffffff;
   }
   #cs-navigation .cs-logo img {
     width: 100%;
@@ -985,6 +985,29 @@
   #cs-navigation .cs-nav-button {
     margin-left: auto;
     border-radius: 0;
+  }
+  #cs-navigation .cs-logo {
+    width: 40%;
+    max-width: 9.125rem;
+    height: 100%;
+    /* prevents padding from affecting height and width */
+    box-sizing: border-box;
+    padding: display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background-color: #ffffff;
+  }
+  #cs-navigation .cs-logo img {
+    width: 400%;
+    height: 100%;
+    /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
+    object-fit: contain;
+    /* places the image to the left edge of the parent */
+    object-position: left;
   }
 }
 /*-- -------------------------- -->
